# eden

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.in  ruff.toml
configs/: config.yaml
notebooks/: experiments.ipynb
report/: main.tex  references.bib
report/chapters/: background.tex  method.tex  results.tex
src/eden/: __init__.py  config.py  utils.py
src/eden/callbacks/: __init__.py  _callback.py
src/eden/loggers/: __init__.py  _file.py  _logger.py  _pbar.py  _statistics.py  _wandb.py
src/eden/models/: __init__.py  _model.py
src/eden/models/teed/: __init__.py  _config.py  _hgnn.py  _meanshift.py  _model.py
src/eden/nn/: __init__.py  _module.py
src/eden/problems/: __init__.py  _problem.py  _rosenbrock.py  _sphere.py
src/eden/training/: __init__.py  _buffer.py  _config.py  _engine.py  _sampler.py
src/ted/: __init__.py  utils.py
src/ted/loggers/: __init__.py  _file.py  _logger.py  _pbar.py  _statistics.py  _wandb.py
src/ted/model/: __init__.py  _config.py  _hgnn.py  _meanshift.py  _ted.py
src/ted/nn/: __init__.py  _module.py
src/ted/problems/: __init__.py  _problem.py  _rosenbrock.py  _sphere.py
src/ted/training/: __init__.py  _buffer.py  _config.py  _engine.py  _sampler.py
