[project]
name = "ted"
version = "0.1.0"
description = "Topology-based Estimation of Distribution algorithm"
authors = [
    { name = "Francesco Gentile", email = "francesco.gentile@studenti.unitn.it" },
    { name = "Manuela Corte Pause", email = "manuela.cortepause@studenti.unit.it" },
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "entmax>=1.3",
    "hydra-core>=1.3",
]
readme = "README.md"
license.file = "LICENSE"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
